# api_mas_enlace

./: nltk.txt  pyproject.toml
services/: cv_features_service.py  vacante_features_service.py
tests/: test.py
utils/: cv_matcher.py
